--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>The Skillet l HOME</title>
 		<meta name="description" content="the is the description">
+		<link rel="stylesheet" href="style.css">
  
 	</head>
 	<body>
